[package]
name = "chat"
version = "0.1.0"
edition = "2021"
authors = ["Bhuwan Pandit"]
description = "A chat application to learn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio="0.5.0"
http-muncher = "0.2.0"
rustc-serialize = "0.3.15"
sha1 = "0.1.1"